# abacus

./: .gitignore  AST.hs  CHANGELOG.md  GUI.hs  Interpreter.hs  Main.hs  Parser.hs  README.md  Setup.hs  abacus.cabal  abacus.css  cabal.project.freeze  calculator.cabal  default.nix  electron.js  hie-wrapper.sh  index.html  out.frefs.js  out.frefs.json  out.stats  package-lock.json  package.json  palette.html
.devcontainer/: devcontainer.json
Abacus/: Interpreter.hs  Parser.hs  Utils.hs
Abacus/Core/: AST.hs  Ast.hs  Interpreter.hs  Parser.hs  Token.hs  Tokenizer.hs  Utils.hs
Abacus/Gui/: History.hs  TeX.hs  Widgets.hs  Window.hs
Abacus/Interpreter/: Utils.hs
Abacus/UI/: History.hs  TeX.hs  Web.hs  Widgets.hs  Window.hs
css/: abacus.css  calculator.css
icons/: abacus.icns
src/Abacus/: AST.hs  Interpreter.hs  Parser.hs  Tokenizer.hs  Utils.hs
src/Abacus/Interpreter/: Ast.hs  Eval.hs  Parser.hs  Token.hs
src/Abacus/UI/: Console.hs  Web.hs
src/Abacus/UI/Web/: History.hs  TeX.hs  Utils.hs
src/Calculator/: AST.hs  Interpreter.hs  Parser.hs  Tokenizer.hs  Utils.hs
src/Calculator/Console/: Main.hs
src/Calculator/UI/: Console.hs  Web.hs
src/Calculator/UI/Web/: MathML.hs  TeX.hs  Utils.hs
src/Calculator/Web/: Main.hs
