cabal-version: >= 2.0

name: abacus
version: 0.1.0.0
author: Sarah Marshall
maintainer: sarah@sarahmarshall.name
category: Math
build-type: Custom

custom-setup
  setup-depends:
    Cabal >= 2.0,
    base >= 4.11,
    filepath ^>= 1.4

executable abacus
  main-is: Main.hs
  other-modules:
    Abacus.Gui.History,
    Abacus.Gui.TeX,
    Abacus.Gui.Widgets,
    Abacus.Gui.Window,
    Abacus.Interpreter.Ast,
    Abacus.Interpreter.Eval,
    Abacus.Interpreter.Parser,
    Abacus.Interpreter.Token,
    Abacus.Interpreter.Utils
  build-depends:
    base >= 4.11,
    containers ^>= 0.6,
    directory ^>= 1.3,
    either ^>= 5.0,
    either-unwrap ^>= 1.1,
    extra ^>= 1.7,
    file-embed ^>= 0.0.11,
    jsaddle ^>= 0.9,
    lens ^>= 4.18,
    parsec ^>= 3.1,
    parsec3-numbers ^>= 0.1,
    reflex-dom ^>= 0.5,
    scientific ^>= 0.3,
    text ^>= 1.2,
    text-format ^>= 0.3
  default-language: Haskell2010
  ghc-options: -Wall
