cabal-version: >= 2.0

name: abacus
version: 0.1.0.0
author: Sarah Marshall
maintainer: sarah@sarahmarshall.name
category: Math
build-type: Custom

custom-setup
  setup-depends:
    Cabal,
    base,
    filepath

executable abacus
  main-is: Main.hs
  other-modules:
    Abacus.Gui.History,
    Abacus.Gui.TeX,
    Abacus.Gui.Widgets,
    Abacus.Interpreter.Ast,
    Abacus.Interpreter.Eval,
    Abacus.Interpreter.Parser,
    Abacus.Interpreter.Token,
    Abacus.Interpreter.Utils
  build-depends:
    base,
    containers,
    directory,
    either,
    either-unwrap,
    extra,
    file-embed,
    jsaddle,
    lens,
    parsec,
    parsec3-numbers,
    reflex-dom,
    scientific,
    text,
    text-format
  default-language: Haskell2010
  ghc-options: -Wall
